--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="action_settings">演示</string>
     <string name="action_step1">步骤1演示</string>
     <string name="action_step2">步骤2演示</string>
+    <string name="action_step3">步骤3演示</string>
     <string name="action_use_opaque">使用不透明素材</string>
     <string name="action_use_transparent">使用透明素材</string>
+    <string name="back_text">如果是透明的你应该能看到我</string>
 </resources>
